# gsea-mito

./: .gitignore  README.md  pyproject.toml
figures/: README.md
figures/deseq.results.allGenes.hscxy.hscxo/gsea-plots/: gsea-metadata.csv
figures/deseq.results.allGenes.mkpgo.hscxo/gsea-plots/: gsea-metadata.csv
figures/deseq.results.allGenes.mkpgo.mkpto/gsea-plots/: gsea-metadata.csv
figures/deseq.results.allGenes.mkpgy.hscxy/gsea-plots/: gsea-metadata.csv
figures/deseq.results.allGenes.mkpgy.mkpgo/gsea-plots/: gsea-metadata.csv
figures/deseq.results.allGenes.mkpgy.mkpto/gsea-plots/: gsea-metadata.csv
figures/deseq.results.allGenes.mkpgy.mkpxo/gsea-plots/: gsea-metadata.csv
figures/deseq.results.allGenes.mkpto.hscxo/gsea-plots/: gsea-metadata.csv
notebooks/: GSEA_Mitochondria_FullDEGList.ipynb  README.md  gsea-mito-full-deg-list.ipynb
utils/: README.md  paths.py
