[project]
name = "gsea-mito"
version = "0.1.0"
description = "My template for bioinformatics analyses in the forsberg lab"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "gseapy>=1.1.12",
    "ipykernel>=7.1.0",
    "jupyter-core>=5.9.1",
    "jupyterlab>=4.5.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pyrootutils>=1.0.4",
    "scanpy>=1.12",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "xlrd>=2.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["utils"]
